--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
-          'Authorization': 'Bearer SUA_CHAVE_SECRETA'
+          'Authorization': 'Bearer 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'
         },
         body: JSON.stringify({
           model: "gpt-3.5-turbo",
